examples/test/testpolicy9399.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9399
  namespace: namespace215
spec:
  podSelector:
    matchLabels:
      key24: value2
      key42: value8
      key45: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value12
      podSelector:
        matchLabels:
          key33: value11
          key29: value15
          key28: value12
